# stellarumprism

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agent/rules/: Communication_style.md  communication_style.old.md
.prism/: 2026.04.30.FIXES.current-real-world-date-2026-04-30-treat-20260430-0317.md  20260429-2332-Bettering-code-mirror-aesthetics.md  20260429-2332-PART2.Bettering-code-mirror-aesthetics.md  HIGHLIGHTS-selection-color-fix.md  POEM.AT.END.commit-any-changes-and-push-to-re-20260428-0153.md  POEM.FEEDBACK.write-a-poem-about-llm-love-and-u-20260427-0428.md  POEM.were-going-to-experiment-a-bit-he-20260427-0342.md  POEM.were-going-to-experiment-a-bit-he-20260427-0358.md  PRISM.ON.PRISM.current-real-world-date-2026-04-30-treat-20260430-2104.md  Poem.md  REVIEW.WORK.REPORT.review-the-last-18-commits-and-do-20260428-1544.md  Review last 5 commits.md  TEMP.move-file-bug.md  audit-commits-11-20-detailed-review.md  audit-trail.jsonl  can-u-confirm-where-ie-to-what-fo-20260426-2053.md  can-u-confirm-where-ie-to-what-fo-20260426-2116.md  fix.notes.filesmodified.chat.md  lets-have-a-discussion-about-a-so-20260426-2252.md  state.json  temp.fix.analysis.chat.md  temp.geminichat.usage.chat.md  temp.re-checking.commits.chat.md  this-project-prism-has-a-proble-20260427-0320.md  usgae.tracking.chat.md  vc-pitchdeck-discussion-20260426-2207.md  vc-pitchdeck-method-discussion.md  write-a-poem-about-llm-love-and-u-20260427-0439.md
.stellarumdev/: audit-commits-4-10-loose-ends.md
VC Templates/: VC list.md  a16z-template.md  sequoia-template.md
docs/: 2026.04.24-prism-test-one.md  ARCHITECTURE.md  BOOTSTRAP.md  SUBSTRATE.md  Test1.md  USAGE.md  agent-diff-ui-test.ts  bolt-to-prism-flow.md  distribution.md  internal-architecture-perplexity-deepseek.md  models-list-2.md  prism-competition.md  prism-competitors.md  prism-dev-strategy.md  substrate8.md  test-poem.md  vc-pitchdeck-2.md  vc-pitchdeck-3.md  vc-pitchdeck.md  vc-prism-auditor.md
prism/: audit-trail.jsonl  state.json
scratch/: test_find.rs
scripts/: check-bootstrap-invariants.mjs  tauri-cli.mjs
src/: agent-find.ts  agent-view.ts  agent-write-artifacts.ts  agent.ts  auto-router.ts  blocks.ts  build-report.ts  build.ts  dev-instance-badge.ts  editor.ts  file-editor.ts  file-refs.ts  file-tree.ts  findings.ts  fix.ts  grounded-rigor.ts  habits.ts  inline-code-format.ts  intent.ts  main.ts  markdown-line-format.ts  models.ts  modes.ts  new.ts  onboarding.ts  problems.ts  protocol-report-card.ts  protocols-menu.ts  reader-ui.ts  refactor.ts  router.ts  session.ts  settings-ui.ts  settings.ts  skill-limits.ts  skills.ts  slash-commands.ts  snippet.ts  styles.css  tabs.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/shell-integration/: prism.zsh
src-tauri/src/: agent.rs  approval.rs  ast_helper.mjs  audit.rs  billing.rs  config.rs  diagnostics.rs  e2e.rs  file_ref.rs  habits.rs  lib.rs  load_chat.rs  lsp.rs  pricing.rs  pty.rs  recipes.rs  run_shell.rs  save_chat.rs  schema.rs  second_pass.rs  session.rs  shell_integration.rs  skills.rs  snapshot.rs  tools.rs  usage.rs  workspace_state.rs
stellarumdev/: VERIFICATION-audit-11-20-fixes.md
tests/: agent-artifact.test.ts  build-report.test.ts  build.test.ts  file-tree.test.ts  findings.test.ts  fix.test.ts  grounded-rigor.test.ts  inline-code-format.test.ts  markdown-line-format.test.ts  new.test.ts  problems.test.ts  refactor.test.ts  skill-limits.test.ts  snippet.test.ts  test-gen.test.ts  turn-summary.test.ts  verified-mode.test.ts  word-wrap.test.ts
(+161 files in other folders)
