[package]
name = "prism"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Disambiguate `cargo run` when multiple bin targets are defined. The
# Tauri binary (the GUI app) is the default; the prism-audit CLI is
# opt-in via `cargo run --bin prism-audit`.
default-run = "prism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone CLI that runs the substrate cells (typecheck, run_tests,
# lsp_diagnostics) without the Tauri runtime or any LLM. Designed for
# CI: a deterministic gate that emits the same `AuditReport` JSON shape
# the GUI's `/audit` produces, with exit codes CI can branch on.
[[bin]]
name = "prism-audit"
path = "src/bin/prism_audit.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
dashmap = "6.1.0"
parking_lot = "0.12.5"
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls", "http2"] }
futures-util = "0.3.32"
toml = "1.1.2"
dirs = "6.0.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-dialog = "2.7.0"

# Phase 4 audit tools:
# - `ignore` provides gitignore-aware directory walking (from the ripgrep
#   project). It transitively pulls in globset + regex, which we use
#   directly in grep/find.
# - `regex` for the grep pattern matcher.
# - `globset` for find's glob matching and grep's optional `glob` filter.
ignore = "0.4"
regex = "1"
globset = "0.4"

